snapshots/syntax/library/functions/logic/switch/switch_with_statement.snap
---
source: vb6parse/src/syntax/library/functions/logic/switch.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WithStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WithKeyword
                  text: With
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: obj
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: PeriodOperator
                              text: "."
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: Status
                            - kind: Whitespace
                              text: " "
                            - kind: EqualityOperator
                              text: "="
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: Switch
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: PeriodOperator
                                              text: "."
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: Value
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: GreaterThanOperator
                                      text: ">"
                            - kind: Whitespace
                              text: " "
                    - kind: Unknown
                      text: "100"
                    - kind: Unknown
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Unknown
                      text: "\"High\""
                    - kind: Unknown
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: CallStatement
                      children:
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Value
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: GreaterThanOperator
                                      text: ">"
                            - kind: Whitespace
                              text: " "
                    - kind: Unknown
                      text: "50"
                    - kind: Unknown
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Unknown
                      text: "\"Medium\""
                    - kind: Unknown
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: CallStatement
                      children:
                        - kind: TrueKeyword
                          text: "True"
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Comma
                                      text: ","
                            - kind: Whitespace
                              text: " "
                    - kind: Unknown
                      text: "\"Low\""
                    - kind: Unknown
                      text: )
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: WithKeyword
                  text: With
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
